third push of Sportify project